--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Hector Ramirez",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "pg": "^8.13.3"
