--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "^4.21.2",
+    "nodemailer": "^6.10.0",
+    "path": "^0.12.7",
     "pg": "^8.13.3"
   }
 }
