--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
     "pg": "^8.13.3"
